--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
@@ -20,7 +23,11 @@
     "primeicons": "^6.0.1",
     "primereact": "^9.6.0",
     "react": "18.2.0",
+    "react-audio-player": "^0.17.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-quill": "^2.0.0",
+    "react-youtube": "^10.1.0",
     "typescript": "5.1.3"
   },
   "devDependencies": {
